--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index2.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
 
                     <li class="nav-item">
@@ -175,13 +175,11 @@
                 <a href="https://wa.me/09126538871" target="_blank" rel="noopener noreferrer">WhatsApp</a>
             </div>
 
-        <div class="item14">
-          <p style="color: aliceblue;">No 1Q144 Road Lube Abuja</p>
-          <p>sarafadeenkolawole@yahoo.com</p>
-          <p>+234 9126538871</p>
-        </div>
-
-
+            <div class="item14">
+                <p style="color: aliceblue;">No 1Q144 Road Lube Abuja</p>
+                <p><a href="mailto:sarafadeenkolawole@yahoo.com">sarafadeenkolawole@yahoo.com</a></p>
+                <p><a href="tel:+2349126538871">+234 9126538871</a></p>
+            </div>
         </div>
     </footer>
 
