--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index2.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
 
 
@@ -94,7 +94,7 @@
                         class="d-block w-100 caroselImage" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>OUR PORTFOILIO SEPAKES FOR US</h5>
-                        <p><a href="/index2.html"> Learn More</a></p>
+                        <p><a href="/"> Learn More</a></p>
                     </div>
                 </div>
 
@@ -104,7 +104,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h5>PRESS OUR PASSION</h5>
                         <p>You are the one we are waiting for to bring our vission in reality <a
-                                href="/index2.html">More</a></p>
+                                href="/">More</a></p>
                     </div>
                 </div>
             </div>
