message of the commited files

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Press Journals</title>
   <link rel="stylesheet" href="./css/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="/css2.css">
-  <link rel="stylesheet" href="/css/myStyle.css">
+  <link rel="stylesheet" href="./css2.css">
+  <link rel="stylesheet" href="./css/myStyle.css">
 </head>
 
 <body>
@@ -79,7 +79,7 @@
         </div>
         <div style="background-color:rgb(236, 234, 234);" class="col-md-6">
           <div class="landingimage">
-            <img src="/images/Saturday Good Vibes party Flyer - Made with PosterMyWall.jpg" width="500vw"
+            <img src="./images/Saturday Good Vibes party Flyer - Made with PosterMyWall.jpg" width="500vw"
               style="border-radius: 5vw;" alt="">
           </div>
         </div>
@@ -88,7 +88,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <img src="/images/kolaxthinking.png" alt="">
+          <img src="./images/kolaxthinking.png" alt="">
         </div>
 
         <div class="col-md-6">
@@ -122,7 +122,7 @@
     <section>
       <div class="container1">
         <div class="item1">
-          <img src="/images/girl coding.png" style="width: 200px;height: 100px;" alt="#">
+          <img src="./images/girl coding.png" style="width: 200px;height: 100px;" alt="#">
           <p style="font-weight: bold;font-size: x-large;margin-top: 20px;">Web Design</p>
           <p>“It is not because things are difficult that we do not dare; it is because we do not dare that
             they
@@ -132,7 +132,7 @@
 
 
         <div class="item2">
-          <img src="/images/coding image2.jpg" style="width: 200px;height: 100px;" alt="#">
+          <img src="./images/coding image2.jpg" style="width: 200px;height: 100px;" alt="#">
           <p style="font-weight: bold;font-size: x-large;margin-top: 20px;">Web Development</p>
           <p>If you are an entrepreneur, you know that your success cannot depend on the opinions of others.
             Like
@@ -141,7 +141,7 @@
         </div>
 
         <div class="item3">
-          <img src="/images/robot image.jpg" style="width: 200px;height: 100px;" alt="#">
+          <img src="./images/robot image.jpg" style="width: 200px;height: 100px;" alt="#">
           <p style="font-weight: bold;font-size: x-large;margin-top: 20px;">Skillful Development </p>
           <p>Do you want to be even more successful? Learn to love learning and growth. The more effort you
             put
@@ -154,7 +154,7 @@
 
       <div id="container2">
         <div id="item4">
-          <img src="/images/printing press image.jpg" style="width: 200px;height: 100px;" alt="#">
+          <img src="./images/printing press image.jpg" style="width: 200px;height: 100px;" alt="#">
           <p style="font-weight: bold;font-size: x-large;margin-top: 20px;">Printing Press</p>
           <p>The printing press revolutionized society by standardizing language, spreading ideas, increasing
             literacy, and growing
@@ -164,7 +164,7 @@
         </div>
 
         <div id="item5">
-          <img src="/images/phone image.png" style="width: 130px;height: 100px;" alt="#">
+          <img src="./images/phone image.png" style="width: 130px;height: 100px;" alt="#">
           <p style="font-weight: bold;font-size: x-large;margin-top: 20px;">Apps Interface</p>
           <p>Do you sometimes have the feeling that you’re running into the same obstacles over and over
             again?
@@ -174,7 +174,7 @@
 
 
         <div id="item6">
-          <img src="/images/graphics image.jpg" style="width: 200px;height: 100px;" alt="#">
+          <img src="./images/graphic design image.jpg" style="width: 200px;height: 100px;" alt="#">
           <p style="font-weight: bold;font-size: x-large;margin-top: 20px;">Graphic Design</p>
           <p>You’ve heard the expression, “Just believe it and it will come.” Well, technically, that is true,
             however, ‘believing’
@@ -465,22 +465,43 @@
 
 
     <footer>
+
       <div class="container4">
         <div class="item11">
+          <h1 style="font-size: 17px;margin-bottom: 30px;">Info</h1>
+
+          <li class="">
+            <a class="foot-info" aria-current="page" href="/">Home</a>
+          </li>
+
+          <li class="">
+            <a class="foot-info" aria-current="page" href="/about.html">About </a>
+          </li>
+
+          <li class="">
+            <a class="foot-info" aria-current="page" href="/services.html">Services </a>
+          </li>
+
+          <li class="">
+            <a class="foot-info" aria-current="page" href="/portfolio.html">Portfoilio </a>
+          </li>
+
+          <h1 style="font-size: 17px; margin-top: 20px;">Newsletter</h1>
+          <p>Stay updated with our latest trends</p>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Enetr Enail Address" aria-label="Search">
+            <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+
+
+        </div>
+
+
+        <div class="item12">
           <h1 style="font-size: 17px;margin-bottom: 30px;">About Me</h1>
           <p>We have tested a number of registry fix and clean utilities and present our top 3 list on our
             site
             for your convenience.
             Copyright ©2024 All rights reserved | This template is made with by Press Journals</p>
-        </div>
-
-
-        <div class="item12">
-          <h1 style="font-size: 17px;margin-bottom: 30px;">Newsletter</h1>
-          <p>Stay updated with our latest trends</p>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Enetr Enail Address" aria-label="Search">
-            <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
         </div>
 
         <div class="item13">
@@ -500,7 +521,6 @@
           <p>sarafadeenkolawole@yahoo.com</p>
           <p>+234 9126538871</p>
         </div>
-
 
       </div>
 
