--- a/services.html
+++ b/services.html
@@ -117,7 +117,7 @@
 
 
             <div id="item6">
-                <img src="/images/graphics image.jpg" style="width: 200px;height: 100px;" alt="#">
+                <img src="./images/graphic design image.jpg" style="width: 200px;height: 100px;" alt="#">
                 <p style="font-weight: bold;font-size: x-large;margin-top: 20px;">Graphic Design</p>
                 <p>You’ve heard the expression, “Just believe it and it will come.” Well, technically, that is true,
                     however, ‘believing’
@@ -205,51 +205,67 @@
         `
 
 
+<footer>
 
-        <footer>
+    <div class="container4">
+        <div class="item11">
+            <h1 style="font-size: 17px;margin-bottom: 30px;">Info</h1>
 
-            <div class="container4">
-                <div class="item11">
-                    <h1 style="font-size: 17px;margin-bottom: 30px;">About Me</h1>
-                    <p>We have tested a number of registry fix and clean utilities and present our top 3 list on our
-                        site
-                        for your convenience.
-                        Copyright ©2024 All rights reserved | This template is made with by Press Journals</p>
-                </div>
+            <li class="">
+                <a class="foot-info" aria-current="page" href="/">Home</a>
+            </li>
+
+            <li class="">
+                <a class="foot-info" aria-current="page" href="/about.html">About </a>
+            </li>
+
+            <li class="">
+                <a class="foot-info" aria-current="page" href="/services.html">Services </a>
+            </li>
+
+            <li class="">
+                <a class="foot-info" aria-current="page" href="/portfolio.html">Portfoilio </a>
+            </li>
+
+            <h1 style="font-size: 17px; margin-top: 20px;">Newsletter</h1>
+            <p>Stay updated with our latest trends</p>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Enetr Enail Address" aria-label="Search">
+                <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
 
 
-                <div class="item12">
-                    <h1 style="font-size: 17px;margin-bottom: 30px;">Newsletter</h1>
-                    <p>Stay updated with our latest trends</p>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Enetr Enail Address"
-                            aria-label="Search">
-                        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
-                    </form>
+        </div>
 
-                </div>
 
-                <div class="item13">
-                    <h1 style="font-size: 17px;margin-bottom: 30px;">Follow Me</h1>
-                    <p>Let us be social</p>
-                    <a href="https://web.facebook.com/profile.php?id=61566881734506" target="_blank"
-                        rel="noopener noreferrer">Facebook</a>
-                    <br>
-                    <a class="navfooter2" href="#">Twitter</a> <br>
-                    <a class="navfooter2" href="#">Instagram</a> <br>
-                    <a href="https://wa.me/09126538871" target="_blank" rel="noopener noreferrer">WhatsApp</a>
-                </div>
+        <div class="item12">
+            <h1 style="font-size: 17px;margin-bottom: 30px;">About Me</h1>
+            <p>We have tested a number of registry fix and clean utilities and present our top 3 list on our
+                site
+                for your convenience.
+                Copyright ©2024 All rights reserved | This template is made with by Press Journals</p>
+        </div>
 
-                <div class="item14">
-                    <p style="color: aliceblue;">No 1Q144 Road Lube Abuja</p>
-                    <p>sarafadeenkolawole@yahoo.com</p>
-                    <p>+234 9126538871</p>
-                </div>
+        <div class="item13">
+            <h1 style="font-size: 17px;margin-bottom: 30px;">Follow Me</h1>
+            <p>Let us be social</p>
+            <a href="https://web.facebook.com/profile.php?id=61566881734506" target="_blank"
+                rel="noopener noreferrer">Facebook</a>
+            <br>
+            <a class="navfooter2" href="#">Twitter</a> <br>
+            <a class="navfooter2" href="#">Instagram</a> <br>
+            <a href="https://wa.me/09126538871" target="_blank" rel="noopener noreferrer">WhatsApp</a>
+        </div>
 
-            </div>
-            
-        </footer>
 
+        <div class="item14">
+            <p style="color: aliceblue;">No 1Q144 Road Lube Abuja</p>
+            <p>sarafadeenkolawole@yahoo.com</p>
+            <p>+234 9126538871</p>
+        </div>
+
+    </div>
+
+</footer>
 
 
 
